--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -1,5 +1,9 @@
-/* TODO: remove html/body styles */
-html, body {
+/*  Remove default margin on html.
+    'standalone' class means the rule only apllies when standalone   
+    layout is used. Will not affect user's page if the chat is
+    embedded.
+*/
+body.standalone {
     margin: 0;
 }
 
@@ -8,6 +12,7 @@ html, body {
     font-family: helvetica, arial, sans-serif;
     box-sizing: border-box;
 }
+
 #rtc-container {
     background-color: #262c33;
 }
@@ -32,17 +37,9 @@ html, body {
 
 #rtc-video-container {
     height: 100%;
-
     float:left;
     background-color: #262c33;
     text-align: center;
-
-    /*flex: 1 1 auto;
-    -webkit-order: 0;
-    order: 0;
-    */   
-
-    
     width: calc(100% - 300px);
     -webkit-user-select: none;
     -moz-user-select: -moz-none;
@@ -66,10 +63,6 @@ html, body {
     float: left;
     background-color: #e8eded;
     min-height: 200px;
-    /*-webkit-flex: 0 0 200px;
-    flex: 0 0 200px;
-    -webkit-order: 1;
-    order: 1;*/
 }
 
 /*.rtc-local-video {
@@ -243,7 +236,6 @@ input[type="checkbox"].audio-option:checked + label {
     width: 90%;   
 }
 
-
 .rtc-button {
     border: 1px solid black;
     background: white;
@@ -253,17 +245,25 @@ input[type="checkbox"].audio-option:checked + label {
 #rtc-options {
     position: absolute;
     z-index: 100;
-    top: 15px;
-    right: 30px;
+    top: 10px;
+    right: 20px;
+    background-color: rgba(232, 237, 237, 0.9);
+    padding: 5px;
+    opacity: 0.7;
+
+    -webkit-transition: opacity 0.4s;
+    transition: opacity 0.4s;
+}
+
+#rtc-options:hover {
+    opacity: 1;   
 }
 
 #rtc-options button {
-    height: 40px;
-    width: 40px;
-    border-radius: 25px;
+    height: 35px;
+    width: 35px;
     background-color: transparent;
     border: none;
-
     background-position: center;
     background-repeat: no-repeat;
     outline: none;
@@ -271,7 +271,10 @@ input[type="checkbox"].audio-option:checked + label {
     text-indent: 300;
     white-space: nowrap;
     border: 3px solid black;
-    overflow: hidden;
+    overflow: hidden;   
+}
+#rtc-options, #rtc-options button {
+    border-radius: 25px;
 }
 
 #rtc-btn-fullscreen {
@@ -291,7 +294,7 @@ input[type="checkbox"].audio-option:checked + label {
 
 #rtc-messages {
     height: calc(100% - 40px);
-    padding: 80px 15px 15px 15px;
+    padding: 60px 15px 15px 15px;
     overflow-y: scroll;
 }
 
