--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -1,29 +1,15 @@
 @media (max-width: 600px) {
     
-    #rtc-video-container {
+    /* if the modile style has been applied then the rule is enforced */
+    #rtc-container.mobile #rtc-video-container {
         width: 100%;
         height: 60%;
     }
-
-    #rtc-messages-container {
+    
+    /* if the modile style has been applied then the rule is enforced */
+    #rtc-container.mobile #rtc-messages-container {
         width: 100%;
         height: 40%;
-        background-color: #edf0f5;
     }
-    
-    .rtc-local-video {
-        width: 30%;
-        position: absolute;
-        left: 20px;
-        top: 20px;
-        -webkit-transition: width 1s, height 1s;
-        transition: width 1s, height 1s;
-    }
-
-    .rtc-remote-video {
-        max-width: 100%;
-        max-height: 100%;
-    }
-
 
 }
