--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -40,12 +40,19 @@
     user-select: none;
 }
 
-#rtc-video-container-center, #rtc-popup-area {
+#rtc-video-container-center {
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+}
+
+ #rtc-popup-area {
+	position: relative;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
 
 #rtc-popup-area{
@@ -65,6 +72,7 @@
     left: 20px;
     top: 20px;
     width: 150px;
+	max-width: 25%;
 }
 
 .rtc-video.rtc-floating-video video {
@@ -315,7 +323,7 @@ input[type="checkbox"].audio-option:checked + label {
 
 #rtc-input-message {
     border: none;
-    width: calc(100% - 120px);
+    width: calc(100% - 123px);
     height: 40px;
     padding: 0 8px;
     font-size: 1.0em;
@@ -339,6 +347,7 @@ button, .rtc-soft-button, #rtc-send {
 #rtc-send {
     padding: 0 8px;   
     height: 28px;
+	font-size: 0.9em;
 }
 
 .rtc-message-icon {
@@ -531,7 +540,7 @@ button, .rtc-soft-button, #rtc-send {
 }
 
 .rtc-popup-container {
-vertical-align: middle;
+
     display: inline-block;
     max-width: 500px;
     z-index: 200;
