--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -12,4 +12,20 @@
         height: 40%;
     }
 
+	.rtc-video.rtc-floating-video video {
+    	width: 100px;
+
+	}
+	.rtc-video.rtc-floating-video {
+		top: 3px;
+		left: 3px;
+	}
+	
+	.rtc-popup-container {
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+	}
+	
 }
